# Premier-League-Twitter-Sentiment-Analysis

./: .flake8  .gitignore  README.md  pyproject.toml  stream_tweets.py
config/: sample_credentials.ini  twitter_api_parameters.ini
pl_sentiment/: __init__.py  twitter_stream.py
scripts/: context.py  stream_tweets.py
